--- a/YWWACP/YWWACP/Resources/layout/HealthPlanMealsRow.axml
+++ b/YWWACP/YWWACP/Resources/layout/HealthPlanMealsRow.axml
@@ -9,5 +9,11 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:textSize="30dp"
-        local:MvxBind="Text Title" />
+        local:MvxBind="Text MealTitle" />
+    <TextView
+        style="@+style/textViewTheme"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:textSize="10dp"
+        local:MvxBind="Text Time" />
 </LinearLayout>
