--- a/YWWACP/YWWACP/Resources/layout/AddExerciseToPlanRow.axml
+++ b/YWWACP/YWWACP/Resources/layout/AddExerciseToPlanRow.axml
@@ -5,13 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <TextView
+        style="@+style/textViewTheme"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:textSize="30dp"
+        android:textSize="40dp"
         local:MvxBind="Text Title" />
-    <TextView
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:textSize="20dp"
-        local:MvxBind="Text Contents" />
 </LinearLayout>
