--- a/YWWACP/YWWACP/Resources/layout/HealthPlanExerciseRow.axml
+++ b/YWWACP/YWWACP/Resources/layout/HealthPlanExerciseRow.axml
@@ -5,16 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <TextView
+        style="@+style/textViewTheme"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:textSize="30dp"
         local:MvxBind="Text Title" />
     <TextView
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:textSize="20dp"
-        local:MvxBind="Text Contents" />
-    <TextView
+        style="@+style/textViewTheme"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:textSize="10dp"
