--- a/YWWACP/YWWACP/Resources/layout/ChartMainPage.axml
+++ b/YWWACP/YWWACP/Resources/layout/ChartMainPage.axml
@@ -3,23 +3,23 @@
     xmlns:local="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent">
-        <Button
-            android:text="@string/New_Thread"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="50"
-            android:id="@+id/btnNewThread"
-            local:MvxBind="Text Connection " />
+       android:layout_height="350dp">
+       
         <OxyPlot.Xamarin.Android.PlotView
             android:id="@+id/plot_view"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            local:MvxBind="Model MyModel"
+            android:padding="410dp"
+            />
+
     </LinearLayout>
-    <include
+
+      <include
         android:id="@+id/navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
