--- a/YWWACP/YWWACP/Resources/layout/FirstView.axml
+++ b/YWWACP/YWWACP/Resources/layout/FirstView.axml
@@ -49,11 +49,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/Exercises"
-        local:MvxBind="Click OpenExerciseCommand"/>
+        local:MvxBind="Click OpenExerciseCommand" />
     <Button
         android:id="@+id/btnGraph"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        local:MvxBind="Click OpenGraphCommand"
         android:text="Graph" />
     <Button
         android:id="@+id/btnDelete"
