--- a/YWWACP/YWWACP/Resources/layout/ChartMainPage.axml
+++ b/YWWACP/YWWACP/Resources/layout/ChartMainPage.axml
@@ -3,26 +3,31 @@
     xmlns:local="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="fill_parent"
-       android:layout_height="350dp">
-       
+        android:layout_alignParentTop="true"
+        android:id="@+id/linearLayoutGraph"
+        android:layout_height="350dp">
         <OxyPlot.Xamarin.Android.PlotView
             android:id="@+id/plot_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            local:MvxBind="Model MyModel"
-            android:padding="410dp"
-            />
-
+            local:MvxBind="Model MyModel" />
     </LinearLayout>
-
-      <include
+    <include
         android:id="@+id/navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         layout="@layout/navbar" />
+    <Mvx.MvxListView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="70"
+        android:layout_above="@id/navigation"
+        android:layout_below="@id/linearLayoutGraph"
+        android:id="@+id/listViewGoals"
+        local:MvxItemTemplate="@layout/goallistviewrow"
+        local:MvxBind="ItemsSource Goals" />
 </RelativeLayout>
