--- a/YWWACP/YWWACP/Resources/layout/Comments.axml
+++ b/YWWACP/YWWACP/Resources/layout/Comments.axml
@@ -33,7 +33,7 @@
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:drawableStart="@drawable/trashsmall"
+            android:drawableStart="@drawable/trashIcon"
             android:id="@+id/textViewTrash"
             local:MvxBind="Click DeletePopupCommand"
             android:paddingTop="5dp" />
