create own recipe

--- a/YWWACP/YWWACP/Resources/layout/Recipes.axml
+++ b/YWWACP/YWWACP/Resources/layout/Recipes.axml
@@ -9,27 +9,32 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         layout="@layout/navbar" />
-    <LinearLayout
-        android:orientation="horizontal"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:id="@+id/linearLayoutWrapTopButtons"
-        android:weightSum="100">
+        android:layout_height="100dp"
+        android:id="@+id/linearLayoutWrapTopButtons">
         <Button
             android:text="Exercises"
-            android:layout_width="0dp"
+            android:layout_width="185dp"
             android:layout_height="wrap_content"
-            android:layout_weight="50"
-            android:id="@+id/btnNewThread"
+            android:layout_alignParentLeft="true"
+            android:layout_toLeftOf="@+id/btnExercise"
+            android:id="@+id/btnExercise"
             local:MvxBind="Click ExerciseViewCommand" />
         <Button
             android:text="Recipes"
-            android:layout_width="0dp"
+            android:layout_width="185dp"
             android:layout_height="wrap_content"
-            android:layout_weight="50"
-            android:id="@+id/btnMyThreads" />
-    </LinearLayout>
+            android:id="@+id/btnRecipe"
+            android:layout_alignParentRight="true" />
+        <Button
+            android:text="Create new recipe"
+            android:layout_width="370dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/btnExercise"
+            android:id="@+id/btnNewRecipe"
+            local:MvxBind="Click CreateNewRecipeCommand"/>
+    </RelativeLayout>
     <Mvx.MvxListView
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -39,5 +44,4 @@
         android:id="@+id/listViewRecipe"
         local:MvxItemTemplate="@layout/recipelistviewrow"
         local:MvxBind="ItemsSource NewRecipes; ItemClick SelectRecipeCommand" />
-
 </RelativeLayout>
