--- a/YWWACP/YWWACP/Resources/layout/NewGoal.axml
+++ b/YWWACP/YWWACP/Resources/layout/NewGoal.axml
@@ -4,6 +4,20 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+  
+   <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="20dip"
+        android:layout_marginTop="15dip"
+        android:text="Dates" />
+  
+    <MvxSpinner
+        android:id="@+id/spinnerDates"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        local:MvxBind="ItemsSource GoalsArray; SelectedItem SelectedGoal" />
+  
     <EditText
         android:inputType="textCapSentences"
         android:layout_width="match_parent"
@@ -13,25 +27,7 @@
         android:textStyle="bold"
         android:textSize="20dip"
         local:MvxBind="Text GoalContent" />
- <!--   <EditText
-        android:inputType="number"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Days until next goal"
-        android:id="@+id/editTxtGoalDate"
-        android:textStyle="bold"
-        android:textSize="20dip"
-        local:MvxBind="Text GoalDate" />  -->
-  <TextView
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:layout_marginTop="15dip"
-      android:text="Dates" />
-  <MvxSpinner
-      android:id="@+id/spinnerDates"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      local:MvxBind="ItemsSource GoalsArray; SelectedItem SelectedGoal" />
+  
     <EditText
         android:inputType="number"
         android:layout_width="match_parent"
@@ -41,8 +37,10 @@
         android:textStyle="bold"
         android:textSize="20dip"
         local:MvxBind="Text GoalSatisfaction" />
+
+   
     <Button
-        android:text="@string/submitThread"
+        android:text="@string/SaveButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/btnSubmitGoal"
