--- a/YWWACP/YWWACP/Resources/layout/FirstView.axml
+++ b/YWWACP/YWWACP/Resources/layout/FirstView.axml
@@ -169,7 +169,7 @@
                 android:gravity="center"
                 android:layout_weight="1">
                 <TextView
-                    android:text="Calories"
+                    android:text="Your BMI"
                     android:textSize="10pt"
                     android:id="@+id/textViewCalories"
                     android:gravity="center_horizontal"
@@ -177,17 +177,19 @@
                     android:layout_height="fill_parent"
                     android:layout_weight="1" />
                 <TextView
-                    android:text="This week burnt"
+                    android:text="BMI - PH"
                     android:gravity="center_horizontal"
                     android:layout_width="wrap_content"
                     android:layout_height="fill_parent"
-                    android:layout_weight="1" />
+                    android:layout_weight="1" 
+                    local:MvxBind="Text BMI"/>
                 <TextView
-                    android:text="Something"
+                    android:text="Good/Bad"
                     android:gravity="center_horizontal"
                     android:layout_width="wrap_content"
                     android:layout_height="fill_parent"
-                    android:layout_weight="1" />
+                    android:layout_weight="1" 
+                    local:MvxBind="Text HealthStatus"/>
             </LinearLayout>
         </LinearLayout>
     <!--boxes end-->
